Add basic HibpApi

--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,16 @@
 {
     "require": {
-        "dxw/iguana": "^1.1"
+        "dxw/iguana": "^1.1",
+        "dxw/result": "^1.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.5",
         "peridot-php/peridot": "^1.19",
         "peridot-php/peridot-dot-reporter": "^1.0",
         "peridot-php/leo": "^1.6",
-        "dxw/phar-install": "^1.0"
+        "dxw/phar-install": "^1.0",
+        "10up/wp_mock": "^0.2.0",
+        "mockery/mockery": "^0.9.9"
     },
     "autoload": {
         "psr-4": {
