--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "peridot-php/leo": "^1.6",
         "dxw/phar-install": "^1.0",
         "10up/wp_mock": "^0.2.0",
-        "mockery/mockery": "^0.9.9"
+        "mockery/mockery": "^0.9.9",
+        "errors/exceptions": "^0.2.0"
     },
     "autoload": {
         "psr-4": {
