--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,6 @@
         "peridot-php/peridot": "^1.19",
         "peridot-php/peridot-dot-reporter": "^1.0",
         "peridot-php/leo": "^1.6",
-        "dxw/phar-install": "^1.0",
         "10up/wp_mock": "^0.2.0",
         "mockery/mockery": "^0.9.9",
         "errors/exceptions": "^0.2.0"
@@ -19,6 +18,6 @@
         }
     },
     "scripts": {
-        "post-update-cmd": "vendor/bin/phar-install"
+        "post-update-cmd": "COMPOSER_VENDOR_DIR=_vendor composer install --no-dev --no-interaction"
     }
 }
